crates/sparrow-main/src/serve/snapshots/sparrow_main__serve__file_service__tests__get_metadata_csv_data.snap
---
source: crates/sparrow-main/src/serve/file_service.rs
expression: result
---
source_metadata:
  schema:
    fields:
      - name: id
        data_type:
          kind:
            Primitive: 6
      - name: name
        data_type:
          kind:
            Primitive: 14
      - name: value
        data_type:
          kind:
            Primitive: 14
      - name: value2
        data_type:
          kind:
            Primitive: 6

