crates/sparrow-main/src/serve/snapshots/sparrow_main__serve__file_service__tests__get_metadata_csv_path.snap
---
source: crates/sparrow-main/src/serve/file_service.rs
expression: result
---
source_metadata:
  schema:
    fields:
      - name: ""
        data_type:
          kind:
            Primitive: 6
        nullable: true
      - name: anonymousId
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: projectId
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: type
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: timestamp
        data_type:
          kind:
            Primitive: 23
        nullable: true
      - name: sentAt
        data_type:
          kind:
            Primitive: 23
        nullable: true
      - name: receivedAt
        data_type:
          kind:
            Primitive: 23
        nullable: true
      - name: channel
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: event
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: messageId
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: name
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: userId
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: version
        data_type:
          kind:
            Primitive: 6
        nullable: true
      - name: context_campaign_content
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_campaign_medium
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_campaign_name
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_campaign_source
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_campaign_term
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_ip
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_library_name
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_library_version
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_locale
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_page_path
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_page_referrer
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_page_search
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_page_title
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_page_url
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: context_userAgent
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_formula
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_isTarget
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_name
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_path
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_referrer
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_search
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_selected
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_title
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_type
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: properties_url
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_activeAccountId
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_BETA_DATA_SCIENCE
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_company
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_DSE_FREE
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_email
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_firstName
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_job
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_lastName
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_name
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_PAID_DS_ACCOUNT
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_PUBLIC
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: traits_userId
        data_type:
          kind:
            Primitive: 14
        nullable: true
      - name: subsort_id
        data_type:
          kind:
            Primitive: 6
        nullable: true

